shared/src/test/data/yeast/invalid-json/incomplete-value-seq-1.jyt
BeginDocument       0,  1,  0 ''
BeginSequence       0,  1,  0 '['
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Error               5,  2,  3 'value1'
Indicator          11,  2,  9 '\n'
EndScalar          12,  3,  0 ''
WhiteSpace         12,  3,  0 '  '
BeginScalar        14,  3,  2 ''
Indicator          14,  3,  2 '\"'
Text               15,  3,  3 'value2'
Indicator          21,  3,  9 '\"'
EndScalar          22,  3, 10 ''
Indicator          22,  3, 10 ','
LineBreak          23,  3, 11 '\n'
WhiteSpace         24,  4,  0 '  '
BeginScalar        26,  4,  2 ''
Indicator          26,  4,  2 '\"'
Text               27,  4,  3 'value3'
Indicator          33,  4,  9 '\"'
EndScalar          34,  4, 10 ''
LineBreak          34,  4, 10 '\n'
EndSequence        35,  5,  0 ']'
